--- a/game.html
+++ b/game.html
@@ -3,11 +3,44 @@
     <head>
         <meta charset="utf-8">
         <title>Rock, Paper, Scissors, Spock, Lizard!</title>
+        <link rel="stylesheet" href="game.css">
     </head>
 
     <body>
         <header>
             <h1>Rock, Paper, Scissors, Spock, Lizard!</h1>
         </header>
+        
+        <div class="score-board">
+            <div id="player-label" class="badge">player</div>
+            <div id ="comp-label" class="badge">comp</div>
+            <span id="player-score">0</span>:<span id="comp-score">0</span>
+        </div>
+
+        <div class="result">
+            <p>Paper covers rock. You win!</p>
+        </div>
+
+        <div class="choices">
+            <div class="choice" id="r">
+                <img src="imgs/rock.png" alt="Rock" height="100" width="100">
+            </div>
+            <div class="choice" id="p">
+                <img src="imgs/paper.png" alt="Paper" height="100" width="100">
+            </div>
+            <div class="choice" id="s">
+                <img src="imgs/scissors.png" alt="Scissors" height="100" width="100">
+            </div>
+            <div class="choice" id="sp">
+                <img src="imgs/spock.png" alt="Spock" height="100" width="100">
+            </div>
+            <div class="choice" id="l">
+                <img src="imgs/lizard.png" alt="Lizard" height="100" width="100">
+            </div>
+        </div>
+
+        <p id="action-message">Make your move!</p>
+
+        <script src="game.js" charset="utf-8"></script>
     </body>
 </html>
