--- a/game.html
+++ b/game.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Rock, Paper, Scissors, Spock, Lizard!</title>
+        <title>Rock, Paper, Scissors, Lizard, Spock!</title>
         <link rel="stylesheet" href="game.css">
     </head>
 
     <body>
         <header>
-            <h1>Rock, Paper, Scissors, Spock, Lizard!</h1>
+            <h1>Rock, Paper, Scissors, Lizard, Spock!</h1>
         </header>
         
         <div class="score-board">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="result">
-            <p>Paper covers rock. You win!</p>
+            <p>Welcome to Trevor's Rock, Paper, Scissors, Lizard, Spock!</p>
         </div>
 
         <div class="choices">
